Fix notifier settings animation speed with many notifiers.

When there are many notifier sources, notifier settings animation speed
was wrong becuase it used view's PreferredSize as the target height,
but the maximum height is limited to the screen height.
As a result, the animation stopped when it reached the screen height.

TEST=manual
BUG=796456

Change-Id: I4cf7083b257d4f5519bc02a0d698509943d662cc
Reviewed-on: https://chromium-review.googlesource.com/835930
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525612}
Former-commit-id: 81646ad835bc8d3d84038be8e63d1466c6212014