ash/message_center/message_center_bubble.h
@@ -64,6 +64,10 @@ class MessageCenterBubble : public views::WidgetObserver,
   message_center::MessageCenter* message_center_;
   message_center::UiController* ui_controller_;
   views::TrayBubbleView* bubble_view_ = nullptr;
+
+  // |message_center_view_| is a child view of the ContentsView, which is a
+  // child view of |bubble_view_|. They're added to the view tree by calling
+  // InitializeContents.
   MessageCenterView* message_center_view_ = nullptr;
 
   // Use settings view as the initially visible content if true.
